--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     -->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=098cf3bbecc0777570a4795a4aebcdf6"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=098cf3bbecc0777570a4795a4aebcdf6&libraries=services"
     ></script>
   </body>
 </html>
